# pyphone

./: .env.example  .gitignore  .gitignore copy  69.86.0.15_12_25_38.pcap  Dockerfile  README.md  config.yaml  example.txt  install.sh  metrics.db  pygui.js  pyproject.toml  requirements.txt  sip.md  test2.py
.twinkle/: default.cfg  default.sys  test.cfg  test.sys
pyphone/: __init__.py  __main__.py  _pjsip.py  app.py  auth.py  cli.py  client.py  config.py  connection.py  dialog.py  exceptions.py  handlers.py  header.py  logger.py  main.py  main2.py  main_2.py  message.py  phone2.py  sdp.py  session.py  sip.py  style.tcss  test.py  test2.py  test3.py  tests.py  tests1.py  tests_l.py  transaction.py  transport.py  user_agent.py  utils.py
pyphone/core/: __init__.py  dialog.py  header.py  message.py  payload.py  peer.py  session.py  tests.py  transport.py  user.py  utils.py
pyphone/protocol/rtp/: codec.py  dtmf.py  rtp.py
pyphone/protocol/sdp/: __init__.py  sdp.py
pyphone/protocol/sip/: auth.py  dialog.py  message.py  sip.py  stack.py  transaction.py
pyphone/t3/: auth.py  connection.py  dialog.py  exceptions.py  header.py  logger.py  main.py  message.py  sdp.py  settings.py  transport.py  user_agent.py
pyphone/test2/: session.py  tests1.py  tests_pyv.py
pyphone/tests1/: auth.py  client.py  dialog.py  header.py  session.py  test.py  transport.py
pyphone/tui/: style.tcss
tests/: test_header.py
