[tool.poetry]
name = "pyphone"
version = "0.1.0"
description = ""
authors = ["Fabio Souza <fabiohcsouza@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
pexpect = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
