[tool.poetry]
name = "pyphone"
version = "0.1.0"
description = ""
authors = ["Fabio Souza <fabiohcsouza@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
textual = "^0.56.4"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
ipython = "^8.27.0"
pytest = "^8.3.3"
numpy = "^2.1.2"
# pyaudio = "^0.2.14"
scipy = "^1.14.1"
# pyvoip = {path = "pyVoIP"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
